k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecker-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: healthchecker-app
  template:
    metadata:
      labels:
        app: healthchecker-app
    spec:
      containers:
        - name: healthchecker
          image: healthchecker:release-0.4
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: web
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: web
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
