k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecker-service
spec:
  selector:
    app: healthchecker-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
